add new website from server na

--- a/xem-phim-bo/tai-kien-quan-nhu-co/index.html
+++ b/xem-phim-bo/tai-kien-quan-nhu-co/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1707,18 +1707,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/merry-madagascar" title="Merry Madagascar">
+          <a class="list-top-movie-link" href="/phim-moi/gio-thoi-tren-dong-lua-mach" title="Gió Thổi Trên Đồng Lúa Mạch">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/merry-madagascar-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gio-thoi-tren-dong-lua-mach-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Merry Madagascar
+             Gió Thổi Trên Đồng Lúa Mạch
             </span>
             <span class="list-top-movie-item-en">
-             Merry Madagascar
+             The Wind That Shakes the Barley
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1729,18 +1729,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tran-thien-thien-trong-loi-don" title="Trần Thiên Thiên Trong Lời Đồn">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-hau-cung" title="Cuộc Chiến Hậu Cung">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tran-thien-thien-trong-loi-don-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-hau-cung-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trần Thiên Thiên Trong Lời Đồn
+             Cuộc Chiến Hậu Cung
             </span>
             <span class="list-top-movie-item-en">
-             The Romance of Tiger and Rose
+             Queen: Love and War
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1751,65 +1751,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khu-rung-nho-dieu-ky" title="Khu Rừng Nhỏ Diệu Kỳ">
+          <a class="list-top-movie-link" href="/phim-moi/ban-hoc-khi-nao-chuyen-di-the" title="Bạn Học, Khi Nào Chuyển Đi Thế?">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khu-rung-nho-dieu-ky-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-hoc-khi-nao-chuyen-di-the-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khu Rừng Nhỏ Diệu Kỳ
+             Bạn Học, Khi Nào Chuyển Đi Thế?
             </span>
             <span class="list-top-movie-item-en">
-             Khu Rừng Nhỏ Diệu Kỳ
+             My Annoying Roommate
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dersu-uzala" title="Dersu Uzala">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dersu-uzala-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Dersu Uzala
+            </span>
+            <span class="list-top-movie-item-en">
+             Dersu Uzala
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/anh-chong-nguoi-may" title="Anh chồng người máy">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-chong-nguoi-may-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Anh chồng người máy
+            </span>
+            <span class="list-top-movie-item-en">
+             Fatal Love
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/moc-22" title="Mốc 22">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/moc-22-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mốc 22
-            </span>
-            <span class="list-top-movie-item-en">
-             Mile 22
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/33-lan-hon-dau" title="33 Lần Hôn Đầu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/33-lan-hon-dau-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             33 Lần Hôn Đầu
-            </span>
-            <span class="list-top-movie-item-en">
-             First Kisses
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
