add new website from server na

--- a/xem-phim-bo/nguoi-chay-xuyen-khong-gian/index.html
+++ b/xem-phim-bo/nguoi-chay-xuyen-khong-gian/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1741,40 +1741,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/di-thu-thai-cuc" title="Dị Thú Thái Cực">
+          <a class="list-top-movie-link" href="/phim-moi/unit-7" title="Unit 7">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/di-thu-thai-cuc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/unit-7-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dị Thú Thái Cực
+             Unit 7
             </span>
             <span class="list-top-movie-item-en">
-             Tai Chi's Beast Mound
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vu-tru-xa-la" title="Vũ Trụ Xa Lạ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-tru-xa-la-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Vũ Trụ Xa Lạ
-            </span>
-            <span class="list-top-movie-item-en">
-             Constellation
+             Unit 7
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1785,18 +1763,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sang-mat" title="Sáng Mắt">
+          <a class="list-top-movie-link" href="/phim-moi/star-trek-khoi-nghia" title="Star Trek: Khởi Nghĩa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sang-mat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/star-trek-khoi-nghia-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sáng Mắt
+             Star Trek: Khởi Nghĩa
             </span>
             <span class="list-top-movie-item-en">
-             Open Your Eyes
+             Star Trek: Insurrection
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ludo-bon-cau-chuyen" title="Ludo: Bốn câu chuyện">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ludo-bon-cau-chuyen-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ludo: Bốn câu chuyện
+            </span>
+            <span class="list-top-movie-item-en">
+             Ludo
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1807,21 +1807,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-accidental-husband" title="The Accidental Husband">
+          <a class="list-top-movie-link" href="/phim-moi/vice" title="Vice">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-accidental-husband-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vice-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             The Accidental Husband
+             Vice
             </span>
             <span class="list-top-movie-item-en">
-             The Accidental Husband
+             Vice
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1829,21 +1829,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hanh-trinh-vuot-nguc" title="Hành trình vượt ngục">
+          <a class="list-top-movie-link" href="/phim-moi/ke-dua-tin-2" title="Kẻ Đưa Tin">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-trinh-vuot-nguc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-dua-tin-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hành trình vượt ngục
+             Kẻ Đưa Tin
             </span>
             <span class="list-top-movie-item-en">
-             The Condemned
+             Moby Dick
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
